Fixed issue: page height overflow

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -26,6 +26,7 @@ html {
 
 .app-page {
 	padding: 20px;
+	height: 100vh;
 
 	.main-content {
 		width: 100%;
